src/re2c-scanner-strings.cc
/* Generated by re2c 4.3 on Fri Dec  5 07:25:33 2025 */
#line 1 "re2c-scanner-strings.re"
/*
This file is part of P2X.
Copyright © 2018 Johannes Willkomm
See the file p2x.cc for copying conditions.
*/

#include "token.ncd.enum.hh"
#include <string.h>

#line 13 "re2c-scanner-strings.cc"
#define YYMAXFILL 4
#line 10 "re2c-scanner-strings.re"


typedef unsigned char uint8_t;

int re2c_scanner_strings_lex(const uint8_t *&s, const uint8_t *&m, uint8_t const * lim)
{

  
#line 24 "re2c-scanner-strings.cc"
#line 17 "re2c-scanner-strings.re"


  lim += YYMAXFILL;

    
#line 31 "re2c-scanner-strings.cc"
{
	uint8_t yych;
	unsigned int yyaccept = 0;
	if ((lim - s) < 4) return false;
	yych = *s;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t': goto yy4;
		case '\n': goto yy5;
		case '\r': goto yy6;
		case ' ': goto yy7;
		case '!': goto yy9;
		case '"': goto yy10;
		case '#': goto yy12;
		case '$': goto yy13;
		case '%': goto yy14;
		case '&': goto yy15;
		case '\'': goto yy16;
		case '(': goto yy18;
		case ')': goto yy19;
		case '*': goto yy20;
		case '+': goto yy22;
		case ',': goto yy23;
		case '-': goto yy24;
		case '.': goto yy25;
		case '/': goto yy27;
		case '0': goto yy29;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy31;
		case ':': goto yy32;
		case ';': goto yy33;
		case '<': goto yy34;
		case '=': goto yy35;
		case '>': goto yy36;
		case '?': goto yy37;
		case '@': goto yy38;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy39;
		case '[': goto yy41;
		case '\\': goto yy42;
		case ']': goto yy43;
		case '^': goto yy44;
		case '{': goto yy45;
		case '|': goto yy46;
		case '}': goto yy47;
		case '~': goto yy48;
		case 0xB0: goto yy49;
		case 0xC0:
		case 0xC1:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF: goto yy50;
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF: goto yy51;
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4:
		case 0xF5:
		case 0xF6:
		case 0xF7: goto yy52;
		default: goto yy2;
	}
yy1:
	++s;
#line 100 "re2c-scanner-strings.re"
	{ return TOKEN_EOF; }
#line 199 "re2c-scanner-strings.cc"
yy2:
	++s;
yy3:
#line 102 "re2c-scanner-strings.re"
	{ return TOKEN_ILLEGAL_CHAR; }
#line 205 "re2c-scanner-strings.cc"
yy4:
	++s;
#line 56 "re2c-scanner-strings.re"
	{ return TOKEN_TAB; }
#line 210 "re2c-scanner-strings.cc"
yy5:
	++s;
#line 55 "re2c-scanner-strings.re"
	{ return TOKEN_NEWLINE; }
#line 215 "re2c-scanner-strings.cc"
yy6:
	++s;
#line 57 "re2c-scanner-strings.re"
	{ return TOKEN_CRETURN; }
#line 220 "re2c-scanner-strings.cc"
yy7:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case ' ': goto yy7;
		default: goto yy8;
	}
yy8:
#line 54 "re2c-scanner-strings.re"
	{ return TOKEN_SPACE; }
#line 232 "re2c-scanner-strings.cc"
yy9:
	++s;
#line 72 "re2c-scanner-strings.re"
	{ return TOKEN_EXCLAM; }
#line 237 "re2c-scanner-strings.cc"
yy10:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
		case 0x00:
		case '\n': goto yy11;
		default: goto yy54;
	}
yy11:
#line 93 "re2c-scanner-strings.re"
	{ return TOKEN_QUOTE; }
#line 249 "re2c-scanner-strings.cc"
yy12:
	++s;
#line 92 "re2c-scanner-strings.re"
	{ return TOKEN_HASH; }
#line 254 "re2c-scanner-strings.cc"
yy13:
	++s;
#line 90 "re2c-scanner-strings.re"
	{ return TOKEN_DOLLAR; }
#line 259 "re2c-scanner-strings.cc"
yy14:
	++s;
#line 87 "re2c-scanner-strings.re"
	{ return TOKEN_MOD; }
#line 264 "re2c-scanner-strings.cc"
yy15:
	++s;
#line 79 "re2c-scanner-strings.re"
	{ return TOKEN_AND; }
#line 269 "re2c-scanner-strings.cc"
yy16:
	yyaccept = 1;
	yych = *(m = ++s);
	switch (yych) {
		case 0x00:
		case '\n': goto yy17;
		default: goto yy58;
	}
yy17:
#line 94 "re2c-scanner-strings.re"
	{ return TOKEN_APOS; }
#line 281 "re2c-scanner-strings.cc"
yy18:
	++s;
#line 59 "re2c-scanner-strings.re"
	{ return TOKEN_L_PAREN; }
#line 286 "re2c-scanner-strings.cc"
yy19:
	++s;
#line 60 "re2c-scanner-strings.re"
	{ return TOKEN_R_PAREN; }
#line 291 "re2c-scanner-strings.cc"
yy20:
	yych = *++s;
	switch (yych) {
		case '/': goto yy59;
		default: goto yy21;
	}
yy21:
#line 86 "re2c-scanner-strings.re"
	{ return TOKEN_MULT; }
#line 301 "re2c-scanner-strings.cc"
yy22:
	++s;
#line 82 "re2c-scanner-strings.re"
	{ return TOKEN_PLUS; }
#line 306 "re2c-scanner-strings.cc"
yy23:
	++s;
#line 75 "re2c-scanner-strings.re"
	{ return TOKEN_COMMA; }
#line 311 "re2c-scanner-strings.cc"
yy24:
	++s;
#line 83 "re2c-scanner-strings.re"
	{ return TOKEN_MINUS; }
#line 316 "re2c-scanner-strings.cc"
yy25:
	yych = *++s;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy60;
		default: goto yy26;
	}
yy26:
#line 77 "re2c-scanner-strings.re"
	{ return TOKEN_FULL_STOP; }
#line 335 "re2c-scanner-strings.cc"
yy27:
	yych = *++s;
	switch (yych) {
		case '*': goto yy63;
		case '/': goto yy64;
		default: goto yy28;
	}
yy28:
#line 84 "re2c-scanner-strings.re"
	{ return TOKEN_DIV; }
#line 346 "re2c-scanner-strings.cc"
yy29:
	yyaccept = 2;
	yych = *(m = ++s);
	switch (yych) {
		case '.': goto yy60;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy31;
		case 'D':
		case 'E':
		case 'F':
		case 'd':
		case 'e':
		case 'f': goto yy61;
		case 'L':
		case 'U':
		case 'l':
		case 'u': goto yy67;
		case 'x': goto yy68;
		default: goto yy30;
	}
yy30:
#line 50 "re2c-scanner-strings.re"
	{ return TOKEN_INTEGER; }
#line 378 "re2c-scanner-strings.cc"
yy31:
	yyaccept = 2;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
	switch (yych) {
		case '.': goto yy60;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy31;
		case 'D':
		case 'E':
		case 'd':
		case 'e': goto yy65;
		case 'F':
		case 'f': goto yy66;
		case 'L':
		case 'U':
		case 'l':
		case 'u': goto yy67;
		default: goto yy30;
	}
yy32:
	++s;
#line 74 "re2c-scanner-strings.re"
	{ return TOKEN_COLON; }
#line 412 "re2c-scanner-strings.cc"
yy33:
	++s;
#line 76 "re2c-scanner-strings.re"
	{ return TOKEN_SEMICOLON; }
#line 417 "re2c-scanner-strings.cc"
yy34:
	++s;
#line 69 "re2c-scanner-strings.re"
	{ return TOKEN_LESS; }
#line 422 "re2c-scanner-strings.cc"
yy35:
	++s;
#line 68 "re2c-scanner-strings.re"
	{ return TOKEN_EQUAL; }
#line 427 "re2c-scanner-strings.cc"
yy36:
	++s;
#line 70 "re2c-scanner-strings.re"
	{ return TOKEN_GREATER; }
#line 432 "re2c-scanner-strings.cc"
yy37:
	++s;
#line 73 "re2c-scanner-strings.re"
	{ return TOKEN_QUESTION; }
#line 437 "re2c-scanner-strings.cc"
yy38:
	++s;
#line 78 "re2c-scanner-strings.re"
	{ return TOKEN_AT; }
#line 442 "re2c-scanner-strings.cc"
yy39:
	yyaccept = 3;
	m = ++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy39;
		case 0xC0:
		case 0xC1:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF: goto yy69;
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF: goto yy70;
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4:
		case 0xF5:
		case 0xF6:
		case 0xF7: goto yy71;
		default: goto yy40;
	}
yy40:
#line 49 "re2c-scanner-strings.re"
	{ return TOKEN_IDENTIFIER; }
#line 573 "re2c-scanner-strings.cc"
yy41:
	++s;
#line 65 "re2c-scanner-strings.re"
	{ return TOKEN_L_BRACKET; }
#line 578 "re2c-scanner-strings.cc"
yy42:
	++s;
#line 85 "re2c-scanner-strings.re"
	{ return TOKEN_BACKSLASH; }
#line 583 "re2c-scanner-strings.cc"
yy43:
	++s;
#line 66 "re2c-scanner-strings.re"
	{ return TOKEN_R_BRACKET; }
#line 588 "re2c-scanner-strings.cc"
yy44:
	++s;
#line 88 "re2c-scanner-strings.re"
	{ return TOKEN_POW; }
#line 593 "re2c-scanner-strings.cc"
yy45:
	++s;
#line 62 "re2c-scanner-strings.re"
	{ return TOKEN_L_BRACE; }
#line 598 "re2c-scanner-strings.cc"
yy46:
	++s;
#line 80 "re2c-scanner-strings.re"
	{ return TOKEN_OR; }
#line 603 "re2c-scanner-strings.cc"
yy47:
	++s;
#line 63 "re2c-scanner-strings.re"
	{ return TOKEN_R_BRACE; }
#line 608 "re2c-scanner-strings.cc"
yy48:
	++s;
#line 71 "re2c-scanner-strings.re"
	{ return TOKEN_TILDE; }
#line 613 "re2c-scanner-strings.cc"
yy49:
	++s;
#line 91 "re2c-scanner-strings.re"
	{ return TOKEN_CIRC; }
#line 618 "re2c-scanner-strings.cc"
yy50:
	yych = *++s;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy39;
		default: goto yy3;
	}
yy51:
	yyaccept = 4;
	yych = *(m = ++s);
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy69;
		default: goto yy3;
	}
yy52:
	yyaccept = 4;
	yych = *(m = ++s);
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy70;
		default: goto yy3;
	}
yy53:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy54:
	switch (yych) {
		case 0x00:
		case '\n': goto yy55;
		case '"': goto yy56;
		default: goto yy53;
	}
yy55:
	s = m;
	switch (yyaccept) {
		case 0: goto yy11;
		case 1: goto yy17;
		case 2: goto yy30;
		case 3: goto yy40;
		case 4: goto yy3;
		default: goto yy62;
	}
yy56:
	++s;
#line 52 "re2c-scanner-strings.re"
	{ return TOKEN_STRING; }
#line 853 "re2c-scanner-strings.cc"
yy57:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy58:
	switch (yych) {
		case 0x00:
		case '\n': goto yy55;
		case '\'': goto yy56;
		default: goto yy57;
	}
yy59:
	++s;
#line 98 "re2c-scanner-strings.re"
	{ return TOKEN_C_COMMENT_END; }
#line 869 "re2c-scanner-strings.cc"
yy60:
	yyaccept = 5;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
yy61:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy60;
		case 'D':
		case 'E':
		case 'd':
		case 'e': goto yy65;
		case 'F':
		case 'L':
		case 'f':
		case 'l': goto yy66;
		default: goto yy62;
	}
yy62:
#line 51 "re2c-scanner-strings.re"
	{ return TOKEN_FLOAT; }
#line 900 "re2c-scanner-strings.cc"
yy63:
	++s;
#line 97 "re2c-scanner-strings.re"
	{ return TOKEN_C_COMMENT_START; }
#line 905 "re2c-scanner-strings.cc"
yy64:
	++s;
#line 96 "re2c-scanner-strings.re"
	{ return TOKEN_DOUBLE_DIV; }
#line 910 "re2c-scanner-strings.cc"
yy65:
	yych = *++s;
	switch (yych) {
		case '+':
		case '-': goto yy72;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy73;
		default: goto yy55;
	}
yy66:
	++s;
	goto yy62;
yy67:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 'L':
		case 'U':
		case 'l':
		case 'u': goto yy67;
		default: goto yy30;
	}
yy68:
	yych = *++s;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy74;
		default: goto yy55;
	}
yy69:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy39;
		default: goto yy55;
	}
yy70:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy69;
		default: goto yy55;
	}
yy71:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy70;
		default: goto yy55;
	}
yy72:
	yych = *++s;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy73;
		default: goto yy55;
	}
yy73:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy73;
		case 'F':
		case 'L':
		case 'f':
		case 'l': goto yy66;
		default: goto yy62;
	}
yy74:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy74;
		case 'L':
		case 'U':
		case 'l':
		case 'u': goto yy67;
		default: goto yy30;
	}
}
#line 104 "re2c-scanner-strings.re"

}

/* Local Variables: */
/* mode: c */
/* coding: latin-1 */
/* End: */
